#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(Message_Test)

AC_USE_SYSTEM_EXTENSIONS

AM_INIT_AUTOMAKE(Message_Test, 1.0)

AC_CONFIG_SRCDIR([Main.cpp])

AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

AC_PROG_CC


# Checks for library functions.
AC_FUNC_MALLOC

AC_OUTPUT(Makefile)

